Revision history for CGI-Info

0.54
	Fix --tablet option
	protocol() - Warn if the calling protocol can't be determined
	Fix protocol() on OpenBSD and NetBSD

0.53	Sat May 30 16:00:49 EDT 2015
	Remove implicit assumption of the build directory

0.52	Sat May 30 08:13:28 EDT 2015
	Fix problem where mobile Chrome claimed it's a robot when data
		compression is enabled
	Ensure + is handled in parameters when encoded as %2B
	cgi_host_url could sometimes give http:// instead of https://
	Set minimum version as 5.6.1 since we use the 3 argument open()
	When running outside CGI, allow one of --tablet, --search-engine,
		--mobile and --robot to mimick those agents.
	is_mobile: include code from detectmobilebrowsers.com

0.51	Fri Jan  2 20:34:46 EST 2015
	Fix breakage on older Perls

0.50	Fri Jan  2 10:37:56 EST 2015
	Put is_mobile in the cache
	Added 'search' to the list of return values from browser_type()
	Added t/used.t
	Don't load cleaning modules when no arguments are given
	Don't use String::EscapeCage - RT99598, String::Clean::XSS should
		suffice

0.49	Fri Nov  7 17:16:25 EST 2014
	Ensure different agents from the same IP don't clash in the cache
	Restore alloing new() arguments to be a reference

0.48	Sun Oct 19 20:35:56 EDT 2014
	Incorporated patch-1 from https://github.com/szabgab/CGI-Info
	Consider Majestic12 to be a search engine
	Only load File::Basename when needed
	Use String::EscapeCage to taint and grab values
	Added param message

0.47	Sun Aug 24 14:56:10 EDT 2014
	Support hostnames with dots at the end, e.g. when the URL used to
		access a site is http://www.example.com., domain_name() will
		return example.com, not example.com..
	params() - return nothing when the call is OPTIONS
	Added more hardening to file uploads
	Added optional cache argument to new() to speed up look-ups
	Test that tmpdir works at the class level

0.46	Mon 11 Nov 08:46:26 EST 2013
	Corrected some documentation issues on params()
	Corrected handling of many cookies